IaC_production/attendance1/securtyGroup.tf
# Public 보안그룹 생성 (SSH, HTTP, busybox allow)
resource "aws_security_group" "attendance_securityGroup_s" {
  name        = "attendance_securityGroup_s"
  description = "attendance 보안 그룹"
  vpc_id      = aws_vpc.attendanceVPC_s.id

  ingress {
    description      = "HTTP from VPC"
    from_port        = 80
    to_port          = 80
    protocol         = "tcp"
    cidr_blocks      = ["0.0.0.0/0"]
  }
    ingress {
    description      = "busybox from VPC"
    from_port        = 3000
    to_port          = 3000
    protocol         = "tcp"
    cidr_blocks      = ["0.0.0.0/0"]
  }
    ingress {
    description      = "HTTPS from VPC"
    from_port        = 443
    to_port          = 443
    protocol         = "tcp"
    cidr_blocks      = ["0.0.0.0/0"]
  }
  egress {
    from_port        = 0
    to_port          = 0
    protocol         = "-1"
    cidr_blocks      = ["0.0.0.0/0"]
    ipv6_cidr_blocks = ["::/0"]
  }

  tags = {
    Name = "attendance_securityGroup_s"
  }
}
